<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/secondary_color"
    android:padding="20dp"
    >
    <TextView
        android:id="@+id/auth_started_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stated_title"
        android:fontFamily="@font/paintball_beta_3"
        android:textColor="@color/black"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/auth_started_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/started_subtitle"
        android:fontFamily="@font/paintball_beta_3"
        android:lineHeight="20sp"
        android:textColor="@color/dark_grey"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auth_started_title"
        />
    <ImageView
        android:id="@+id/auth_image_started"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_artwork___splatoon_squid_orange"
        android:contentDescription="@string/started_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/ButtonGreen"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_register"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/auth_image_started"
        tools:layout_editor_abosoluteX="20dp"
        style="@style/ButtonPink"
        />


</androidx.constraintlayout.widget.ConstraintLayout>